Update and rename rus.textile to rus.textile

--- a/Xx4evRockerxX/90915-humanitarian-crisis-journalism/f-w/rus.textile
+++ b/Xx4evRockerxX/90915-humanitarian-crisis-journalism/f-w/rus.textile
@@ -30,13 +30,15 @@
 
 «Если прошло больше 15 минут, сделайте это ещё раз. Час туда и, конечно, час обратно. Мы будем там не менее 3 часов, по моему лучшему предположению, которое, как известно, не работает. На маршруте нет остановок по очевидным соображениям безопасности. И я не знаю, заметили ли вы, но мы не в стране, которая особенно поддерживает женщин, за исключением их роли в рождении и воспитании детей».
 
-— Итак, — продолжил он. «Если вы не уверены в своей способности не пользоваться туалетом весь день, или вы каким-то образом чувствуете себя комфортно и компетентно в использовании бутылки в задней части нашего бронированного автомобиля, я бы посоветовал вам пописить прямо перед тем, как мы уедем. приоритет. КАЖДЫЙ раз, когда мы уезжаем».
+— Итак, — продолжил он. — Если вы не уверены в своей способности не пользоваться туалетом весь день, или вы каким-то образом чувствуете себя комфортно и компетентно в использовании бутылки в задней части нашего бронированного автомобиля, я бы посоветовал вам пописить прямо перед тем, как мы уедем. приоритет. КАЖДЫЙ раз, когда мы уезжаем.
 
 «Да сэр. Спасибо, что объяснили мне это, — ответила Эйприл, одновременно радуясь тому, что причина была реальной, но также и немного смущённая. Какому 21-летнему надо было напомнить пописить?
 
-— Прошло около часа, сэр. Она продолжила.
+— Прошло около часа, сэр, — сказала она.
 
-Ещё один вздох капитана. — Давай, снова сделай перерыв в в*нной. Мы подождём, я полагаю.
+Ещё один вздох капитана. 
+
+— Давай, снова сделай перерыв в туалет. Мы подождём, я полагаю.
 
 — Да, сэр, — слабо ответила Эйприл и, ещё больше смущённая, направилась через автомобильный отсек к в*нной.
 
