--- a/Xx4evRockerxX/88875-zero-bathroom-passes-this-semester/f-d/rus.textile
+++ b/Xx4evRockerxX/88875-zero-bathroom-passes-this-semester/f-d/rus.textile
@@ -52,7 +52,7 @@
 
 — Я имею в виду, у нас достаточно времени, чтобы наполнить твою бутылку водой. — предложила Лиза.
 
-— Не могу, — ответила Белла. «Сегодня я не могу пис*ть в кампусе, поэтому ДОЛЖЕН следить за тем, что пью».
+— Не могу, — ответила Белла. «Сегодня я не могу писить в кампусе, поэтому ДОЛЖЕН следить за тем, что пью».
 
 «Ах, чувак, грубо». — предложила Лиза. «Я полностью понимаю, что ты чувствуешь. У меня всего 6 пропусков в туалет в неделю. В основном раз в день. Как мне с этим справиться?»
 
@@ -102,7 +102,7 @@
 
 «Я знаю, но между занятиями так мало времени», — убеждала Лиза. «Что ты собираешься делать, неловко стоять снаружи? Просто пойдём со мной.
 
-«Ты не единственный, кто должен ходить в в*нную», — ответила Белла. — Только я не могу.
+«Ты не единственная, кто должен ходить в туалет», — ответила Белла. — Только я не могу.
 
 «Пожалуйста?» Лиза попыталась ещё раз.
 
@@ -124,7 +124,7 @@
 
 — Что это, Белла? — спросила Лиза, всё ещё писая.
 
-«Мне нужно выбраться отсюда», — ответила Белла, выходя из в*нной, оставив Лизу, другую женщину писающей и всю стекающую воду.
+«Мне нужно выбраться отсюда», — ответила Белла, выходя из туалета, оставив Лизу, другую женщину писающей и всю стекающую воду.
 
 *007*2023-05-17 00:26
 
@@ -152,7 +152,7 @@
 
 — Нет проблем, давай, — едва подумав, ответила она.
 
-Белла, с другой стороны, была переполнена и не могла перестать думать о том, как сильно ей нужно было попис*ть.
+Белла, с другой стороны, была переполнена и не могла перестать думать о том, как сильно ей нужно было пописить.
 
 *008*2023-05-27 01:30
 
@@ -162,11 +162,11 @@
 
 «Что? Нет почему? В чём дело?» — быстро спросила Лиза.
 
-«Мне очень нужно в в*нную», — ответила Белла, гораздо мягче, но всё так же настойчиво и целеустремлённо.
+«Мне очень нужно в туалет, — ответила Белла, гораздо мягче, но всё так же настойчиво и целеустремлённо.
 
-«Вот и всё?» Лиза усмехнулась. «Я беспокоился, что это что-то важное или очень плохое. Я уже знаю, что тебе нужно попис*ть. Ты бросил меня, когда я уходил, помнишь?
+«Вот и всё?» Лиза усмехнулась. «Я беспокоился, что это что-то важное или очень плохое. Я уже знаю, что тебе нужно пописить. Ты бросил меня, когда я уходил, помнишь?
 
-«Лиза, ты не понимаешь», Белла изо всех сил пыталась объяснить. «Мне нужно попис*ть так, ОЧЕНЬ сильно. Пожалуйста, мне буквально нужно идти домой. Я даже не могу подумать, что мне нужно так сильно мочиться».
+«Лиза, ты не понимаешь», Белла изо всех сил пыталась объяснить. «Мне нужно пописмть так, ОЧЕНЬ сильно. Пожалуйста, мне буквально нужно идти домой. Я даже не могу подумать, что мне нужно так сильно мочиться».
 
 Бел. Я знаю, что в этом семестре у них было мало пропусков в туалет. Я имею в виду, посмотри на меня, — возразила Лиза. — Но ты действительно должен использовать один из своих. Ты выглядишь таким неудобным.
 
@@ -188,5 +188,6 @@
 
 «Мне так жаль, Белла. Ты можешь сделать это, — сказала Лиза, направляясь к классу.
 
-Белла осталась без выбора. Она отправилась на урок физкультуры, мечтая вернуться домой, чтобы наконец-то попис*ть.
+Белла осталась без выбора. Она отправилась на урок физкультуры, мечтая вернуться домой, чтобы наконец-то пописить.
+
 
