--- a/2/XxAbthedevxX/89846-looking-for-specific-stories/f-d-w/rus.textile
+++ b/2/XxAbthedevxX/89846-looking-for-specific-stories/f-d-w/rus.textile
@@ -4,7 +4,7 @@
 
 *000*2023-06-09 17:20
 
-Эй, я ищу истории, в которых женщинам нужно очень срочно попис*ть, но притворяться спокойными. Конечным результатом может быть смачивание или, возможно, другой компромисс, я открыт для чего угодно.
+Эй, я ищу истории, в которых женщинам нужно очень срочно пописить, но притворяться спокойными. Конечным результатом может быть смачивание или, возможно, другой компромисс, я открыт для чего угодно.
 
 Если у кого-то есть такие истории, пожалуйста, поделитесь ими на этом сайте или, может быть, на других.
 
