--- a/2/XxAbthedevxX/96734-resquesting-a-continuation-from-the-authors-of-omo-org/f/rus.textile
+++ b/2/XxAbthedevxX/96734-resquesting-a-continuation-from-the-authors-of-omo-org/f/rus.textile
@@ -10,7 +10,7 @@
 
 %https://www.literotica.com/s/mei-ling-pt-02
 
-У меня самого нет особых пис*тельских способностей, но мне бы хотелось, чтобы эта старая классика возродилась.
+У меня самого нет особых писательских способностей, но мне бы хотелось, чтобы эта старая классика возродилась.
 
 А также для тех, кто не знал, что такое существует, добро пожаловать!
 
@@ -24,6 +24,5 @@
 
 }}
 
-Ух ты, окей, у тебя есть ещё скрытые жемчужины, подобные этим?
-
+Ух ты, окей, у вас есть ещё скрытые жемчужины, подобные этим?
 
